# cli-toolbelt

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  flake.nix
src/: commands.rs  main.rs  utils.rs
src/clients/: mod.rs  pinger.rs
src/commands/: cidr.rs  diff.rs  dns.rs  domain.rs  ports.rs  rng.rs  ssl.rs  tcp.rs
src/inputs/: cidr.rs  domain.rs  host.rs  mod.rs  numbers.rs
src/models/: domain.rs  mod.rs  number_input.rs
