[package]
name = "cli-toolbelt"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"

[build-dependencies]
reqwest = { version = "*", features = ["blocking"] }
anyhow = "*"
chrono = "*"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.4"
env_logger = "0.10.0"
futures = "0.3.28"
log = { version = "0.4.20", features = ["serde", "kv_unstable"] }
num = "0.4.1"
num-bigint = "0.4.3"
openssl = { version = "0.10.45", features = ["vendored"] }
rand = "0.8.5"
reqwest = "0.11.20"
surge-ping = "0.7.3"
tokio = { version = "1.26.0", features = ["full"] }
trust-dns-resolver = "0.23.0"
url = "2.3.1"
