[package]
name = "cli-toolbelt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.4"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
futures = "0.3.28"
num = "0.4.1"
num-bigint = "0.4.3"
openssl = "0.10"
rand = "0.8.5"
reqwest = "0.11"
serde = { version = "1.0.197", features = ["derive", "rc"] }
surge-ping = "0.7.3"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
trust-dns-resolver = "0.23.0"
url = "2.3.1"
